--- a/visualization/data.ipynb
+++ b/visualization/data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "max        24.000000        2.410000         292.570000      97.650000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,46 +461,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     240141\n",
-       "unique         2\n",
-       "top           No\n",
-       "freq      230194\n",
-       "Name: HadStroke, dtype: object"
+       "array([ 4,  0,  5,  3,  2, 25, 30, 15, 29,  8, 16, 20, 10,  9,  7,  1, 21,\n",
+       "        6, 27, 14, 12, 11, 13, 28, 17, 23, 24, 26, 18, 22, 19])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"HadStroke\"].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['No', 'Yes'], dtype=object)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"HadStroke\"].unique()"
+    "df[\"PhysicalHealthDays (Past 30 Days)\"].unique()"
    ]
   },
   {
@@ -739,9 +716,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['State', 'Sex', 'GeneralHealth', 'PhysicalHealthDays (Past 30 Days)',\n",
+       "       'MentalHealthDays (Past 30 Days)', 'LastCheckupTime',\n",
+       "       'PhysicalActivities', 'SleepHours', 'RemovedTeeth', 'HadHeartAttack',\n",
+       "       'HadAngina', 'HadStroke', 'HadAsthma', 'HadSkinCancer', 'HadCOPD',\n",
+       "       'HadDepressiveDisorder', 'HadKidneyDisease', 'HadArthritis',\n",
+       "       'HadDiabetes', 'DeafOrHardOfHearing', 'BlindOrVisionDifficulty',\n",
+       "       'DifficultyConcentrating', 'DifficultyWalking',\n",
+       "       'DifficultyDressingBathing', 'DifficultyErrands', 'SmokerStatus',\n",
+       "       'ECigaretteUsage', 'ChestScan', 'RaceEthnicityCategory', 'AgeCategory',\n",
+       "       'HeightInMeters', 'WeightInKilograms', 'BMI', 'AlcoholDrinkers',\n",
+       "       'HIVTesting', 'FluVaxLast12', 'PneumoVaxEver', 'TetanusLast10Tdap',\n",
+       "       'HighRiskLastYear', 'CovidPos'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['No', 'Yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"HadSkinCancer\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BMI: ? number\n",
+    "\n",
+    "Smoking: ['Former smoker', 'Never smoked',\n",
+    "       'Current smoker - now smokes every day',\n",
+    "       'Current smoker - now smokes some days']\n",
+    "\n",
+    "Alcohol Drinking: ['No', 'Yes']\n",
+    "\n",
+    "Stroke: ['No', 'Yes']\n",
+    "\n",
+    "Physical Health: ? number\n",
+    "\n",
+    "Mental Health: ? number\n",
+    "\n",
+    "Difficult Walking: ['No', 'Yes']\n",
+    "\n",
+    "Sex: ['Female', 'Male']\n",
+    "\n",
+    "Age Category: ['Age 65 to 69', 'Age 70 to 74', 'Age 75 to 79', 'Age 80 or older',\n",
+    "       'Age 50 to 54', 'Age 40 to 44', 'Age 60 to 64', 'Age 55 to 59',\n",
+    "       'Age 45 to 49', 'Age 35 to 39', 'Age 25 to 29', 'Age 30 to 34',\n",
+    "       'Age 18 to 24']\n",
+    "\n",
+    "Race: ['White only, Non-Hispanic', 'Black only, Non-Hispanic',\n",
+    "       'Other race only, Non-Hispanic', 'Multiracial, Non-Hispanic',\n",
+    "       'Hispanic']\n",
+    "\n",
+    "Diabetic: ['No', 'Yes', 'Yes, but only during pregnancy (female)',\n",
+    "       'No, pre-diabetes or borderline diabetes']\n",
+    "\n",
+    "Physical Activity: ['Yes', 'No']\n",
+    "\n",
+    "General Health: ['Very good', 'Fair', 'Good', 'Excellent', 'Poor']\n",
+    "\n",
+    "Sleep Time: ? number\n",
+    "\n",
+    "Asthma: ['No', 'Yes']\n",
+    "\n",
+    "Kidney Disease: ['No', 'Yes']\n",
+    "\n",
+    "Skin Cancer: ['No', 'Yes']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
