--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:16:00.116533Z",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:35.293478Z",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-03-19T19:12:52.897807Z",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.95      0.91      0.93     58484\n",
-      "           1       0.32      0.45      0.37      5475\n",
+      "           1       0.31      0.46      0.37      5475\n",
       "\n",
       "    accuracy                           0.87     63959\n",
       "   macro avg       0.63      0.68      0.65     63959\n",
@@ -174,11 +174,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[53167,  5317],\n",
-       "       [ 3008,  2467]])"
+       "array([[52970,  5514],\n",
+       "       [ 2956,  2519]])"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,18 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0.10592007, 0.23355507, 0.31094959, 0.24380846, 0.18355999,\n",
-       "         0.36196195, 1.02578446, 0.23992647, 0.13731794, 0.17836728]]),\n",
-       " array([-1.29497405]))"
+       "(array([[0.09889642, 0.22637016, 0.30912101, 0.2488255 , 0.18334112,\n",
+       "         0.37937364, 1.03940385, 0.25440507, 0.13933909, 0.17579232]]),\n",
+       " array([-1.30315598]))"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,22 +217,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.32010234  1.1040892  -0.26303861 -0.48014307 -0.48192102  1.00166544\n",
-      "   0.81801946 -0.49020301 -0.41018268 -0.24607813]]\n",
-      "[[ True  True  True  True  True  True  True  True  True  True]]\n"
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\u001b[38;5;241m.\u001b[39mfit(X_train_oversampled\u001b[38;5;241m.\u001b[39mvalues)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscaler.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 13\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mdump(scaler, f)\n\u001b[1;32m     14\u001b[0m df_new \u001b[38;5;241m=\u001b[39m X_train_oversampled\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     16\u001b[0m df_new_normalized \u001b[38;5;241m=\u001b[39m normalize_row(df_new, scaler)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
      ]
     }
    ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
+    "import pickle\n",
     "def normalize_row(row, scaler):\n",
     "    # Reshape row to match expected input of scaler\n",
     "    row_reshaped = row.values.reshape(1, -1)\n",
@@ -242,7 +244,8 @@
     "\n",
     "# Fit scaler\n",
     "scaler = StandardScaler().fit(X_train_oversampled.values)\n",
-    "\n",
+    "with open('scaler.pkl', 'wb') as f:\n",
+    "    pickle.dump(scaler, f)\n",
     "df_new = X_train_oversampled.iloc[0]\n",
     "\n",
     "df_new_normalized = normalize_row(df_new, scaler)\n",
