add local scaler

--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -217,18 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m scaler \u001b[38;5;241m=\u001b[39m StandardScaler()\u001b[38;5;241m.\u001b[39mfit(X_train_oversampled\u001b[38;5;241m.\u001b[39mvalues)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mscaler.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 13\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mdump(scaler, f)\n\u001b[1;32m     14\u001b[0m df_new \u001b[38;5;241m=\u001b[39m X_train_oversampled\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     16\u001b[0m df_new_normalized \u001b[38;5;241m=\u001b[39m normalize_row(df_new, scaler)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.30036189  1.10526784 -0.26307841 -0.48092632 -0.48201241  0.99725274\n",
+      "   0.81917094 -0.49229319 -0.41130464 -0.24539354]]\n",
+      "[[ True  True  True  True  True  True  True  True  True  True]]\n"
      ]
     }
    ],
@@ -258,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23.49, 1.0, 0.0, 0.0, 0.0, 0.0, 8.0, 0.0, 0.0, 0.0]\n"
+      "[26.63, 1.0, 0.0, 0.0, 0.0, 1.0, 10.0, 0.0, 0.0, 0.0]\n"
      ]
     }
    ],
@@ -275,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The predicted probability is: [0.15757764]\n"
+      "The predicted probability is: [0.16067047]\n"
      ]
     }
    ],
@@ -291,11 +289,12 @@
     "import numpy as np\n",
     "\n",
     "user_input = [29.76, 0.0, 0.0, 0.0, 0.0, 1.0, 7.0, 0.0, 0.0, 0.0]\n",
+    "with open('scaler.pkl', 'rb') as f:\n",
+    "    scaler2 = pickle.load(f)\n",
+    "user_input_T = normalize_row(pd.DataFrame([user_input]),scaler2)\n",
     "\n",
-    "user_input_T = normalize_row(pd.DataFrame([user_input]),scaler)\n",
-    "\n",
-    "coef = np.array([0.09250334, 0.23067485, 0.30712092, 0.24308795, 0.19264143,\n",
-    "         0.35994048, 1.03353847, 0.2447468 , 0.13934069, 0.17743164]).flatten()\n",
+    "coef = np.array([0.09889642, 0.22637016, 0.30912101, 0.2488255 , 0.18334112,\n",
+    "         0.37937364, 1.03940385, 0.25440507, 0.13933909, 0.17579232]).flatten()\n",
     "intercept = -1.29850855\n",
     "\n",
     "# Compute the linear combination of inputs and weights\n",
