--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -494,14 +494,14 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.98      0.83      0.90     46518\n",
-      "           1       0.20      0.74      0.32      2687\n",
+      "           1       0.20      0.76      0.32      2687\n",
       "\n",
       "    accuracy                           0.83     49205\n",
-      "   macro avg       0.59      0.79      0.61     49205\n",
+      "   macro avg       0.59      0.80      0.61     49205\n",
       "weighted avg       0.94      0.83      0.87     49205\n",
       "\n",
-      "[[ 1.21512983  0.69124318 -0.07544885  0.43098219  0.40228529 -0.30212243\n",
-      "   0.24850358  0.13760466  0.08391792 -0.16766917]] [0.16889174]\n"
+      "[[ 1.20418188  0.71994361 -0.07368749  0.4308176   0.38058965 -0.29344281\n",
+      "   0.23605199  0.13270312  0.09138451 -0.16525378]] [0.15924511]\n"
      ]
     },
     {
@@ -510,7 +510,7 @@
        "['./saved_files/logistic_model.joblib']"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
     "print(log_reg.coef_,log_reg.intercept_)\n",
     "\n",
     "scaler = StandardScaler().fit(X_train_oversampled.values)\n",
-    "with open('scaler.pkl', 'wb') as f:\n",
+    "with open('./saved_files/scaler.pkl', 'wb') as f:\n",
     "    pickle.dump(scaler, f)\n",
     "\n",
     "dump(log_reg, './saved_files/logistic_model.joblib')\n"
@@ -570,24 +570,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.80009919 0.19990081]\n",
-      " [0.9298941  0.0701059 ]\n",
-      " [0.92835463 0.07164537]\n",
-      " [0.24873796 0.75126204]\n",
-      " [0.92449072 0.07550928]\n",
-      " [0.56674332 0.43325668]\n",
-      " [0.72579102 0.27420898]\n",
-      " [0.95065576 0.04934424]\n",
-      " [0.86108127 0.13891873]\n",
-      " [0.67133593 0.32866407]\n",
-      " [0.70271329 0.29728671]]\n"
+      "[[0.68924272 0.31075728]\n",
+      " [0.50556966 0.49443034]\n",
+      " [0.51268851 0.48731149]\n",
+      " [0.62306698 0.37693302]\n",
+      " [0.87725271 0.12274729]\n",
+      " [0.67972368 0.32027632]\n",
+      " [0.87716042 0.12283958]\n",
+      " [0.74783605 0.25216395]\n",
+      " [0.9073931  0.0926069 ]\n",
+      " [0.9385693  0.0614307 ]\n",
+      " [0.79489329 0.20510671]]\n"
      ]
     }
    ],
