Refined readme and instructions

--- a/model/regression.ipynb
+++ b/model/regression.ipynb
@@ -818,10 +818,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**With BMI values ranging between 20 and 30 the number of patients possibly having heart disease is less.**"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
