--- a/model/regression_oversample.ipynb
+++ b/model/regression_oversample.ipynb
@@ -234,8 +234,7 @@
       "\n",
       "    accuracy                           0.83     49205\n",
       "   macro avg       0.60      0.80      0.62     49205\n",
-      "weighted avg       0.94      0.83      0.87     49205\n",
-      "\n"
+      "weighted avg       0.94      0.83      0.87     49205\n"
      ]
     },
     {
